Login Page Struc

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,13 @@
+/* Importing Google Fonts*/
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Montserrat", sans-serif;
+}
+
 body {
     display: flex;
     align-items: center;
@@ -17,4 +27,3 @@ input#uquery {
     padding: 10px;
     font-size: 16px;
 }
-
