--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,8 +18,22 @@ body {
 
 .header {
     width: 100%;
-    height: 50px;
+    height: 48.8px;
     background-color: #423d3d;
+}
+
+.header nav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.header nav a:hover {
+    background-color: #ddd;
+    color: black;
 }
 
 input#uquery {
