--- a/smartLib_app/smartlib/templates/signup.html
+++ b/smartLib_app/smartlib/templates/signup.html
@@ -1,18 +1,19 @@
+
 <!DOCTYPE html>
 
 <html>
 
 <head>
-    <title>Profile</title>
+    <title>Signup</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
-    <div class="login_form">
-        <!-- Login form container -->
+    <div class="form_container">
+        <!-- Signup form container -->
         <form action="#">
-          <h3>Log in</h3>
+          <h3>Sign up</h3>
           <!-- Email input box -->
           <div class="input_box">
             <label for="email">Email</label>
@@ -22,15 +23,16 @@
           <div class="input_box">
             <div class="password_title">
               <label for="password">Password</label>
-              <a href="#">Forgot Password?</a>
+              <a href="#">Forgot Pasasword?</a>
             </div>
             <input type="password" id="password" placeholder="Enter your password" required />
+            <input type="password" id="password" placeholder="Confirm your password" required />
           </div>
            <!-- Login button -->
-          <button type="submit">Log In</button>
-          <p class="sign_up">Don't have an account? <a href="#">Sign up</a></p>
+          <button type="submit">Sign Up</button>
+          <p class="sign_up">Already have an account? <a href="login.html">Log in</a></p>
         </form>
-      </div>
+    </div>
 </body>
 
 </html>
