--- a/smartLib_app/smartlib/templates/signup.html
+++ b/smartLib_app/smartlib/templates/signup.html
@@ -23,7 +23,7 @@
           <div class="input_box">
             <div class="password_title">
               <label for="password">Password</label>
-              <a href="#">Forgot Pasasword?</a>
+              <a href="#">Forgot Password?</a>
             </div>
             <input type="password" id="password" placeholder="Enter your password" required />
             <input type="password" id="password" placeholder="Confirm your password" required />
