--- a/smartLib_app/smartlib/templates/stylesheet.css
+++ b/smartLib_app/smartlib/templates/stylesheet.css
@@ -36,12 +36,6 @@ body {
     color: black;
 }
 
-input#uquery {
-    width: 300px;
-    padding: 10px;
-    font-size: 16px;
-}
-
 /* General form styling */
 .form_container {
     width: 100%;
@@ -149,4 +143,38 @@ form button:hover {
 .contact_form h3 {
     font-size: 20px;
     text-align: center;
+}
+
+/* Search & Filter Section */
+.search-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+.search-container input {
+    padding: 15px;
+    width: 350px;
+    font-size: 18px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+.search-container select, .search-container button {
+    padding: 15px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.search-container button {
+    background-color: #c20a0a;
+    color: white;
+    border: none;
+    transition: 0.3s;
+}
+
+.search-container button:hover {
+    background-color: #a00a0a;
 }
