--- a/smartLib_app/smartlib/templates/dash.html
+++ b/smartLib_app/smartlib/templates/dash.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-
+{% load static %}
 <html>
 
 <head>
     <title>Library Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="dash.css">
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="{% static 'css/dash.css' %}">
+    <link rel="stylesheet" href="{% static 'css/stylesheet.css' %}">
 </head>
 
 <body>
     <div class = "header">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="login.html">Login</a>
-            <a href="signup.html">Signup</a>
-            <a href="contact.html">Support</a>
+            <a href="/index">Home</a>
+            <a href="/login">Login</a>
+            <a href="/signup">Signup</a>
+            <a href="/contact">Support</a>
         </nav>
     </div>
 
