--- a/smartLib_app/smartlib/templates/index.html
+++ b/smartLib_app/smartlib/templates/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
 
 <head>
     <title>SmartLib</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="{% static 'css/stylesheet.css' %}">
 </head>
 
 <body>
     <div class = "header">
         <nav>
-            <a href="login.html">Login</a>
-            <a href="signup.html">Signup</a>
-            <a href="dash.html">Dashboard</a>
-            <a href="contact.html">Support</a>
+            <a href="/login">Login</a>
+            <a href="/signup">Signup</a>
+            <a href="/dash">Dashboard</a>
+            <a href="/contact">Support</a>
         </nav>
     </div>
     
