Book Search Bar and filters implemented

--- a/smartLib_app/smartlib/templates/index.html
+++ b/smartLib_app/smartlib/templates/index.html
@@ -31,7 +31,16 @@
 
         <!--Needs JavaScript Implementation-->
         <button onclick="searchBooks()">Search</button>
+        
     </div>
+
+    <!-- Search Results Section -->
+    <div id="search-results"></div> <!-- Results will be shown here -->
+    
+    <!-- Pagination Section -->
+    <div id="pagination" class="pagination-container"></div> <!-- Pagination Buttons -->
+
+    <script src="{% static 'js/script.js' %}"></script>
 </body>
 
 </html>
