--- a/smartLib_app/smartlib/templates/dash.html
+++ b/smartLib_app/smartlib/templates/dash.html
@@ -12,7 +12,7 @@
 <body>
     <div class = "header">
         <nav>
-            <a href="/index">Home</a>
+            <a href="/">Home</a>
             <a href="/login">Login</a>
             <a href="/signup">Signup</a>
             <a href="/contact">Support</a>
