--- a/smartLib_app/smartlib/templates/success.html
+++ b/smartLib_app/smartlib/templates/success.html
@@ -8,6 +8,6 @@
     </head>
 <body>
     <h1>Thank you, {{ name }}!</h1>
-    <p>Your message has been sent successfully.</p>
+    <p>Success.</p>
 </body>
 </html>
