--- a/smartLib_app/smartlib/static/css/stylesheet.css
+++ b/smartLib_app/smartlib/static/css/stylesheet.css
@@ -21,19 +21,63 @@ body {
     height: 48.8px;
     background-color: #423d3d;
 }
+  
+.nav-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px;
+    height: 48.8px;
+}
 
-.header nav a {
-    float: left;
+.nav-left, .nav-right {
+    display: flex;
+    align-items: center;
+    gap: 2px;
+}
+
+.nav-left a {
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
-    text-decoration: none;
     font-size: 17px;
+    text-decoration: none;
 }
-
-.header nav a:hover {
+.nav-left a:hover {
     background-color: #ddd;
     color: black;
+    text-decoration: none;
+}
+
+.btn-header-left {
+    background-color: transparent;
+    color: #fff;
+    padding: 8px 16px;
+    border-radius: 10px;
+    font-weight: 600;
+    text-decoration: none;
+    transition: background-color 0.2s ease;
+}
+
+.btn-header-left:hover {
+    background-color: #d3d1d1;
+    color: #000;
+    text-decoration: none;
+}
+
+.btn-header-right {
+    background-color: #c20a0a;
+    color: #fff;
+    padding: 8px 16px;
+    border-radius: 10px;
+    font-weight: 600;
+    text-decoration: none;
+    transition: background-color 0.2s ease;
+}
+
+.btn-header-right:hover {
+    background-color: #df0e0e;
+    text-decoration: none;
 }
 
 /* General form styling */
