--- a/smartLib_app/smartlib/templates/index.html
+++ b/smartLib_app/smartlib/templates/index.html
@@ -9,17 +9,25 @@
 </head>
 
 <body>
-    <div class = "header">
-        <nav>
+    <div class="header">
+        <nav class="nav-container">
+          <div class="nav-left">
             {% if user.is_authenticated %}
                 <a href="/dash">Dashboard</a>
-            {% else %}
-                <a href="/login">Login for access</a>
             {% endif %}
-        <!-- Remember to make this a hovering button at the buttom right on index -->
-            <a href="/contact">Support</a>
+            <a href="/contact">Contact</a>
+          </div>
+      
+          <div class="nav-right">
+            {% if user.is_authenticated %}
+              <a href="/logout" class="btn-header-right">Logout</a>
+            {% else %}
+              <a href="/login" class="btn-header-left">Login</a>
+              <a href="/signup" class="btn-header-right">Signup</a>
+            {% endif %}
+          </div>
         </nav>
-    </div>
+      </div>
     
     <h1 class="site-title">📚 SmartLib Digital Library</h2>
     <!-- Search Container -->
