--- a/smartLib_app/smartlib/templates/contact.html
+++ b/smartLib_app/smartlib/templates/contact.html
@@ -13,24 +13,34 @@
     <hr>
 
     <div class="contact_form">
-        <!--Name input box-->
         <h3>Contact Us</h3>
         <form method="POST">
             {% csrf_token %}
+
+            {% if form.errors %}
+                <ul class="form-errors">
+                    {% for field in form %}
+                        {% for error in field.errors %}
+                            <li>{{ field.label }}: {{ error }}</li>
+                        {% endfor %}
+                    {% endfor %}
+                </ul>
+            {% endif %}
+
             <div class="input_box">
-                <label>Name</label>
-                <input type="text" name="name" value=""placeholder="Enter name" required><br>
-            
-                <label>Email</label>
-                <input type="email" name="email" value="" placeholder="Enter email address" required><br>
-            
-                <label>Subject</label>
-                <input type="text" name="subject" value="" placeholder="Enter subject topic" required><br>
-            
-                <label>Your Message:</label><br>
-                <textarea name="message" rows="10" cols="30" placeholder="Type your message here..." required></textarea><br>
-                
-                <input type="submit" name="Send message">
+                {{ form.name.label_tag }}
+                {{ form.name }}
+
+                {{ form.email.label_tag }}
+                {{ form.email }}
+
+                {{ form.subject.label_tag }}
+                {{ form.subject }}
+
+                {{ form.message.label_tag }}
+                {{ form.message }}
+
+                <input type="submit" value="Send message">
             </div>
         </form>
     </div>
