--- a/smartLib_app/smartlib/templates/login.html
+++ b/smartLib_app/smartlib/templates/login.html
@@ -10,25 +10,38 @@
 
 <body>
     <div class="form_container">
-        <!-- Login form container -->
-        <form action="#">
-          <h3>Log in</h3>
-          <!-- Email input box -->
-          <div class="input_box">
-            <label for="email">Email</label>
-            <input type="email" id="email" placeholder="Enter email address" required />
-          </div>
-          <!-- Paswwrod input box -->
-          <div class="input_box">
-            <div class="password_title">
-              <label for="password">Password</label>
-              <a href="#">Forgot Password?</a>
+        <form method="post">
+            {% csrf_token %}
+            <h3>Log in</h3>
+
+            {% if form.errors %}
+                <ul class="form-errors">
+                    {% for field in form %}
+                        {% for error in field.errors %}
+                            <li>{{ field.label }}: {{ error }}</li>
+                        {% endfor %}
+                    {% endfor %}
+                    {% for error in form.non_field_errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+
+            <div class="input_box">
+                {{ form.username.label_tag }}
+                {{ form.username }}
             </div>
-            <input type="password" id="password" placeholder="Enter your password" required />
-          </div>
-           <!-- Login button -->
-          <button type="submit">Log In</button>
-          <p class="sign_up">Don't have an account? <a href="/signup">Sign up</a></p>
+
+            <div class="input_box">
+                <div class="password_title">
+                    {{ form.password.label_tag }}
+                    <a href="#">Forgot Password?</a>
+                </div>
+                {{ form.password }}
+            </div>
+
+            <button type="submit">Log In</button>
+            <p class="sign_up">Don't have an account? <a href="{% url 'signup' %}">Sign up</a></p>
         </form>
     </div>
 </body>
