--- a/smartLib_app/smartlib/templates/signup.html
+++ b/smartLib_app/smartlib/templates/signup.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 {% load static %}
 <html>
@@ -11,26 +10,47 @@
 
 <body>
     <div class="form_container">
-        <!-- Signup form container -->
-        <form action="#">
-          <h3>Sign up</h3>
-          <!-- Email input box -->
-          <div class="input_box">
-            <label for="email">Email</label>
-            <input type="email" id="email" placeholder="Enter email address" required />
-          </div>
-          <!-- Paswwrod input box -->
-          <div class="input_box">
-            <div class="password_title">
-              <label for="password">Password</label>
-              <a href="#">Forgot Password?</a>
+        <form method="post">
+            {% csrf_token %}
+            <h3>Sign up</h3>
+
+            {% if form.errors %}
+                <ul class="form-errors">
+                    {% for field in form %}
+                        {% for error in field.errors %}
+                            <li>{{ field.label }}: {{ error }}</li>
+                        {% endfor %}
+                    {% endfor %}
+                </ul>
+            {% endif %}
+
+            <div class="input_box">
+                {{ form.username.label_tag }}
+                {{ form.username }}
             </div>
-            <input type="password" id="password" placeholder="Enter your password" required />
-            <input type="password" id="password" placeholder="Confirm your password" required />
-          </div>
-           <!-- Login button -->
-          <button type="submit">Sign Up</button>
-          <p class="sign_up">Already have an account? <a href="/login">Log in</a></p>
+
+            <div class="input_box">
+                {{ form.email.label_tag }}
+                {{ form.email }}
+            </div>
+
+            <div class="input_box">
+                {{ form.password1.label_tag }}
+                {{ form.password1 }}
+            </div>
+
+            <div class="input_box">
+                {{ form.password2.label_tag }}
+                {{ form.password2 }}
+            </div>
+
+            <div class="input_box">
+                {{ form.role.label_tag }}
+                {{ form.role }}
+            </div>
+
+            <button type="submit">Sign Up</button>
+            <p class="sign_up">Already have an account? <a href="{% url 'login' %}">Log in</a></p>
         </form>
     </div>
 </body>
