--- a/smartLib_app/smartlib/templates/success.html
+++ b/smartLib_app/smartlib/templates/success.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 {% load static %}
 <html>
-    <head>
-        <title>Message Sent</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="{% static 'css/stylesheet.css' %}">
-    </head>
+<head>
+    <title>Message Sent</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{% static 'css/stylesheet.css' %}">
+</head>
 <body>
-    <h1>Thank you, {{ name }}!</h1>
-    <p>Success.</p>
+    <div class="success-message">
+        <h1>Thank you, {{ name }}!</h1>
+        <p>Your message has been sent successfully. We'll get back to you soon.</p>
+        <a href="{% url 'index' %}" class="btn">Return to Home</a>
+    </div>
 </body>
 </html>
